# AltirraSDL

./: BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  build.sh
.claude/: settings.local.json
.claude/skills/sdl3/: SKILL.md  index.md  lookup.md
.claude/skills/sdl3/docs/SDL3/: APIByCategory.md  Android.md  AppFreezeDuringDrag.md  Articles.md  BestKeyboardPractices.md  Books.md  CategoryAPI.md  CategoryAPICategory.md  CategoryAPIDatatype.md  CategoryAPIEnum.md  CategoryAPIEnumerators.md  CategoryAPIFunction.md  CategoryAPIMacro.md  CategoryAPIStruct.md  CategoryAndroid.md  CategoryAssert.md  CategoryAsyncIO.md  CategoryAtomic.md  CategoryAudio.md  CategoryBeginCode.md  CategoryBits.md  CategoryBlendmode.md  CategoryCPUInfo.md  CategoryCamera.md  CategoryClipboard.md  CategoryDialog.md  CategoryDlopenNotes.md  CategoryEndian.md  CategoryError.md  CategoryEvents.md  CategoryFilesystem.md  CategoryGPU.md  CategoryGUID.md  CategoryGameController.md  CategoryGamepad.md  CategoryHIDAPI.md  CategoryHaptic.md  CategoryHints.md  CategoryIOStream.md  CategoryInit.md  (+4204 more)
EXAMPLES/: torus3d.xex
PORTING/: .AGENT_PROMPTS.md.kate-swp  ANDROID.md  AUDIO.md  BUILD.md  DEBUGGER_TODO_LIST.txt  DISPLAY.md  DISPLAY_TODO_LIST.txt  INPUT.md  INPUT_TODO_LIST.txt  MAIN_LOOP.md  NETWORK.md  OVERVIEW.md  SHADERS_TODO_LIST.txt  SYSTEM.md  TOOLS_TODO_LIST.txt  UI.md  UI_TODO_LIST.txt
ROMS/: 32-in-1 Nezgar1-font.rom  32-in-1 Nezgar1.rom  Archiver.rom  Atari 1400XL 1.ROM  Atari 1400XL 2.ROM  IDE+2.0(LBA1210).rom  IDE+2.0(SDX445).rom  IDE+2.0(SDX447).rom  ISPlate (4k).rom  ISPlate.rom  KMK-JZ IDE(HDB111).rom  OMNIMON.ROM  PERCOM.EPR  REV2-UHSIO.ROM  Rapidus Flash.rom  SDX446s1.rom  SDX446s2.rom  SIDE(SDX445).rom  T10504K.EPR  TOMS1050.EPR  TheChip-v1.0(Code1001).rom  TheChip-v1.0(Code9999).rom  U1mb flash.rom  Ultimate1MB 2.0.rom  Ultimate1MB v2 (SDX447&APT, PBI BIOS v1.0, SIDELoader, custom).rom  Ultimate1MBv2_with_pbi_and_loader.rom  Ultimate1Mb.rom  XE04IFRH.ROM  XE130PAL.ROM  xel.rom  xl-xe-rom-16k-27c128-modified.rom
contrib/: README.md  cas_tester.py
src/: CMakeLists.txt
src/ATAudio/: CMakeLists.txt
src/ATAudio/source/: audiooutput_sdl3.cpp
src/ATCore/: CMakeLists.txt
src/ATCore/source/: checksum_intrin.cpp  configvar.cpp  decmath.cpp  fft.cpp
src/ATDebugger/: CMakeLists.txt
src/ATDevices/: CMakeLists.txt
src/ATDevices/h/: stdafx.h
src/ATEmulation/: CMakeLists.txt
src/ATEmulation/h/: stdafx.h
src/ATIO/: CMakeLists.txt
src/ATIO/h/: stdafx.h
src/ATIO/source/: audioreaderflac.cpp  cassetteaudiofilters.cpp  cassetteimage.cpp  vorbisbitreader.cpp
src/ATNetwork/: CMakeLists.txt
src/ATNetwork/h/: stdafx.h
src/ATNetwork/source/: udpstack.cpp
src/ATVM/: CMakeLists.txt
src/ATVM/h/: stdafx.h
src/Altirra/h/: diskdriveAMDC.h  gtia.h
src/Altirra/source/: disk.cpp  gtia.cpp  hostdevice.cpp  simulator.cpp  siomanager.cpp
src/AltirraSDL/: CMakeLists.txt
src/AltirraSDL/romdata/: kernel_rom.h  kernelxl_rom.h  nokernel_rom.h
src/AltirraSDL/source/: commandline_sdl3.cpp  commands_sdl3.cpp  display_backend_gl33.cpp  display_sdl3.cpp  display_sdl3_impl.h  gl_funcs.cpp  gl_funcs.h  input_sdl3.cpp  input_sdl3.h  main_sdl3.cpp  shaders_screenfx.inl  touch_controls.cpp  touch_layout.cpp  touch_layout.h  ui_dbg_memory.cpp  ui_dbg_memory.h  ui_dbg_memory_bitmap.cpp  ui_dbg_memory_hexdump.cpp  ui_dbg_printer.cpp  ui_dbg_traceviewer.cpp  ui_dbg_traceviewer_panels.cpp  ui_dbg_traceviewer_timeline.cpp  ui_firmware.cpp  ui_keyboard_customize.cpp  ui_main.cpp  ui_main.h  ui_menus.cpp  ui_mobile.cpp  ui_screenfx.cpp  ui_system.cpp  ui_testmode.cpp  ui_tool_tapeeditor.cpp  ui_tool_tapeeditor.h  ui_tool_tapeeditor_ops.cpp  ui_tool_tapeeditor_view.cpp  ui_tools.cpp
src/AltirraSDL/stubs/: console_stubs.cpp  device_stubs.cpp  joystick_stubs.cpp  oshelper_stubs.cpp  uiaccessors_stubs.cpp  uirender_stubs.cpp  win32_stubs.cpp
src/Kasumi/: CMakeLists.txt
src/Kasumi/source/: blt.cpp  resample_stages_x64.cpp
src/Kernel/source/: main.lst
src/compat/: intrin.h  tchar.h
src/h/at/atcore/: fft.h
src/h/vd2/VDDisplay/: display.h
src/h/vd2/system/: atomic.h  binary.h  bitmath.h  file.h  math.h  memory.h  thread.h  time.h  vdstl_fastvector.h  vdtypes.h  zip.h
src/system/: CMakeLists.txt
src/system/source/: Error.cpp  cpuaccel.cpp  debug_sdl3.cpp  file_sdl3.cpp  filestream.cpp  filesys_sdl3.cpp  int128.cpp  math.cpp  memory.cpp  registry_sdl3.cpp  thread.cpp  time_sdl3.cpp  zip.cpp
src/vdjson/: CMakeLists.txt
(+640 files in other folders)
